server/src/main/java/com/example/cardealership/web/error/InvalidListingStatusException.java
package com.example.cardealership.web.error;

public class InvalidListingStatusException extends BusinessValidationException {

    public InvalidListingStatusException(String status) {
        super("Invalid listing status: " + status);
    }
}